<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
        <LinearLayout android:orientation="vertical"
            android:layout_gravity="top|center_horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtOfficeText"
                    android:layout_width="263dp"
                    android:layout_height="65dp"
                    android:gravity="center"
                    android:text="@string/office_name_Tehran_fa"
                    android:background="@drawable/background_call_text"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="8dp"
                    android:layout_gravity="center"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnCall"
                    android:layout_width="270dp"
                    android:layout_height="70dp"
                    android:text="@string/sales_center_fa"
                    android:textSize="24sp"
                    android:textColor="#ffffff"
                    android:drawableRight="@mipmap/ic_call"
                    android:drawablePadding="4dp"
                    android:theme="@style/CallButton1" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnEmail"
                    android:layout_width="270dp"
                    android:layout_height="70dp"
                    android:text="@string/email_address"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:drawableRight="@mipmap/ic_mail"
                    android:drawablePadding="4dp"
                    android:theme="@style/CallButton2" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnWeb"
                    android:layout_width="270dp"
                    android:layout_height="70dp"
                    android:text="@string/url_address"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:drawableRight="@mipmap/ic_web"
                    android:drawablePadding="4dp"
                    android:theme="@style/CallButton3" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnAddressTehran"
                    android:layout_width="270dp"
                    android:layout_height="70dp"
                    android:text="@string/address_on_map_fa"
                    android:textSize="24sp"
                    android:textColor="#ffffff"
                    android:drawableRight="@mipmap/ic_location"
                    android:drawablePadding="4dp"
                    android:theme="@style/CallButton4" />

                <TextView
                    android:id="@+id/txtQomOfficeText"
                    android:layout_width="263dp"
                    android:layout_height="65dp"
                    android:gravity="center"
                    android:text="@string/office_name_Qom_fa"
                    android:background="@drawable/background_call_text"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnQomCall"
                    android:layout_width="270dp"
                    android:layout_height="70dp"
                    android:text="@string/sales_center_fa"
                    android:textSize="24sp"
                    android:textColor="#ffffff"
                    android:drawableRight="@mipmap/ic_call"
                    android:drawablePadding="4dp"
                    android:theme="@style/CallButton1" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnQomEmail"
                    android:layout_width="270dp"
                    android:layout_height="70dp"
                    android:text="@string/email_address"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:drawableRight="@mipmap/ic_mail"
                    android:drawablePadding="4dp"
                    android:theme="@style/CallButton2" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnQomWeb"
                    android:layout_width="270dp"
                    android:layout_height="70dp"
                    android:text="@string/url_address"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:drawableRight="@mipmap/ic_web"
                    android:drawablePadding="4dp"
                    android:theme="@style/CallButton3" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnAddressQom"
                    android:layout_width="270dp"
                    android:layout_height="70dp"
                    android:text="@string/address_on_map_fa"
                    android:textSize="24sp"
                    android:textColor="#ffffff"
                    android:drawableRight="@mipmap/ic_location"
                    android:drawablePadding="4dp"
                    android:theme="@style/CallButton4" />

        </LinearLayout>

</android.support.v4.widget.NestedScrollView>